Update index.html and add pani poori recipe
Add ingredients and steps for pani poori recipe in unordered list and ordered list respectively

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Recipes</title>
 </head>
 <body>
+    <h1>Odin Recipes</h1>
+    <a href="recipes/panipoori.html">Pani Poori</a>
     
 </body>
 </html>
