add 2 more recipes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/panipoori.html">Pani Poori</a>
+    <ul>
+        <a href="recipes/panipoori.html">Pani Poori</a>
+        <a href="recipes/biriyani.html">Biriyani</a>
+        <a href="recipes/chapathi.html">Chapathi</a>
+    </ul>
     
 </body>
 </html>
